<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedpage1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >


...
                android:textColor="#8d3d44"
                android:layout_centerHorizontal="true"
                />


            <ImageView
                android:id="@+id/messageIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/message"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                />
...
                android:layout_weight="1"
                android:gravity="center"

                >

                <ImageView
                    android:id="@+id/homeIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/home"
                    android:scaleType="centerInside"
                    android:clickable="true"
                    />
...
