<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:id="@+id/chatlist"
    >

    <!-- Top Bar -->
    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
...
